# simple_neural_network

./: README.md  main.py  pyproject.toml
neural_network/: activation_func.py  neural_network.py
tests/: test_nn.py
