[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["IDL13 <leonov.ilya.02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
